data/derived/sp14/progs/unify/prog1593.ml.out
Characters 198-208:
  | n ->  append [helper (n / 10)] [(n mod 10)] in
                                    ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
